Fix Contact Section Alignment

--- a/styles.css
+++ b/styles.css
@@ -411,13 +411,14 @@ body
 
 #contact__title {
     height: 20%;
-    padding-left: 1em;
+    padding-top: 0.5em;
+    margin-left: 1em;
     font-size: 5rem;
 }
 
 #contact__area__container {
     width: 100%;
-    height: 80%;
+    height: 70%;
     display: flex;
     justify-content: center;
 }
@@ -429,12 +430,11 @@ body
 
 #contact__area ul {
     width: 50%;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-bottom: 4em;
     list-style: none;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .contact__item {
@@ -537,5 +537,10 @@ body
 
     #contact__area ul {
         display: none;
+    }
+
+    #contact__title {
+        margin-left: 0px;
+        text-align: center;
     }
 }
